Update msal-node public API

--- a/ref/msal-node/classes/_src_cache_storage_.storage.html
+++ b/ref/msal-node/classes/_src_cache_storage_.storage.html
@@ -139,15 +139,21 @@
 					<a name="constructor" class="tsd-anchor"></a>
 					<h3>constructor</h3>
 					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">new <wbr>Storage<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="_src_cache_storage_.storage.html" class="tsd-signature-type">Storage</a></li>
+						<li class="tsd-signature tsd-kind-icon">new <wbr>Storage<span class="tsd-signature-symbol">(</span>logger<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Logger</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="_src_cache_storage_.storage.html" class="tsd-signature-type">Storage</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/cache/Storage.ts#L23">src/cache/Storage.ts:23</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/cache/Storage.ts#L27">src/cache/Storage.ts:27</a></li>
 								</ul>
 							</aside>
+							<h4 class="tsd-parameters-title">Parameters</h4>
+							<ul class="tsd-parameters">
+								<li>
+									<h5>logger: <span class="tsd-signature-type">Logger</span></h5>
+								</li>
+							</ul>
 							<h4 class="tsd-returns-title">Returns <a href="_src_cache_storage_.storage.html" class="tsd-signature-type">Storage</a></h4>
 						</li>
 					</ul>
@@ -166,7 +172,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides CacheManager.clear</p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/cache/Storage.ts#L261">src/cache/Storage.ts:261</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/cache/Storage.ts#L277">src/cache/Storage.ts:277</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -189,7 +195,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides CacheManager.containsKey</p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/cache/Storage.ts#L236">src/cache/Storage.ts:236</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/cache/Storage.ts#L254">src/cache/Storage.ts:254</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -220,7 +226,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/cache/Storage.ts#L44">src/cache/Storage.ts:44</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/cache/Storage.ts#L48">src/cache/Storage.ts:48</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -238,7 +244,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_src_cache_storage_.storage.html">Storage</a>.<a href="_src_cache_storage_.storage.html#getaccount">getAccount</a></p>
 								<ul>
-									<li>Defined in node_modules/@azure/msal-common/dist/src/cache/CacheManager.d.ts:69</li>
+									<li>Defined in node_modules/@azure/msal-common/dist/src/cache/CacheManager.d.ts:68</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -269,7 +275,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_src_cache_storage_.storage.html">Storage</a>.<a href="_src_cache_storage_.storage.html#getaccountsfilteredby">getAccountsFilteredBy</a></p>
 								<ul>
-									<li>Defined in node_modules/@azure/msal-common/dist/src/cache/CacheManager.d.ts:82</li>
+									<li>Defined in node_modules/@azure/msal-common/dist/src/cache/CacheManager.d.ts:81</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -299,7 +305,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_src_cache_storage_.storage.html">Storage</a>.<a href="_src_cache_storage_.storage.html#getallaccounts">getAllAccounts</a></p>
 								<ul>
-									<li>Defined in node_modules/@azure/msal-common/dist/src/cache/CacheManager.d.ts:44</li>
+									<li>Defined in node_modules/@azure/msal-common/dist/src/cache/CacheManager.d.ts:43</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -321,7 +327,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/cache/Storage.ts#L51">src/cache/Storage.ts:51</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/cache/Storage.ts#L55">src/cache/Storage.ts:55</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -344,7 +350,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_src_cache_storage_.storage.html">Storage</a>.<a href="_src_cache_storage_.storage.html#getcredential">getCredential</a></p>
 								<ul>
-									<li>Defined in node_modules/@azure/msal-common/dist/src/cache/CacheManager.d.ts:74</li>
+									<li>Defined in node_modules/@azure/msal-common/dist/src/cache/CacheManager.d.ts:73</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -375,7 +381,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_src_cache_storage_.storage.html">Storage</a>.<a href="_src_cache_storage_.storage.html#getcredentialsfilteredby">getCredentialsFilteredBy</a></p>
 								<ul>
-									<li>Defined in node_modules/@azure/msal-common/dist/src/cache/CacheManager.d.ts:100</li>
+									<li>Defined in node_modules/@azure/msal-common/dist/src/cache/CacheManager.d.ts:99</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -404,7 +410,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides CacheManager.getItem</p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/cache/Storage.ts#L125">src/cache/Storage.ts:125</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/cache/Storage.ts#L135">src/cache/Storage.ts:135</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -437,7 +443,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides CacheManager.getKeys</p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/cache/Storage.ts#L243">src/cache/Storage.ts:243</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/cache/Storage.ts#L261">src/cache/Storage.ts:261</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -459,7 +465,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/cache/Storage.ts#L40">src/cache/Storage.ts:40</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/cache/Storage.ts#L44">src/cache/Storage.ts:44</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -495,7 +501,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_src_cache_storage_.storage.html">Storage</a>.<a href="_src_cache_storage_.storage.html#removeaccount">removeAccount</a></p>
 								<ul>
-									<li>Defined in node_modules/@azure/msal-common/dist/src/cache/CacheManager.d.ts:115</li>
+									<li>Defined in node_modules/@azure/msal-common/dist/src/cache/CacheManager.d.ts:114</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -524,7 +530,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_src_cache_storage_.storage.html">Storage</a>.<a href="_src_cache_storage_.storage.html#removeaccountcontext">removeAccountContext</a></p>
 								<ul>
-									<li>Defined in node_modules/@azure/msal-common/dist/src/cache/CacheManager.d.ts:120</li>
+									<li>Defined in node_modules/@azure/msal-common/dist/src/cache/CacheManager.d.ts:119</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -555,7 +561,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_src_cache_storage_.storage.html">Storage</a>.<a href="_src_cache_storage_.storage.html#removecredential">removeCredential</a></p>
 								<ul>
-									<li>Defined in node_modules/@azure/msal-common/dist/src/cache/CacheManager.d.ts:125</li>
+									<li>Defined in node_modules/@azure/msal-common/dist/src/cache/CacheManager.d.ts:124</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -586,7 +592,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides CacheManager.removeItem</p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/cache/Storage.ts#L169">src/cache/Storage.ts:169</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/cache/Storage.ts#L183">src/cache/Storage.ts:183</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -611,14 +617,14 @@
 					<a name="savecacherecord" class="tsd-anchor"></a>
 					<h3>save<wbr>Cache<wbr>Record</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-inherited">
-						<li class="tsd-signature tsd-kind-icon">save<wbr>Cache<wbr>Record<span class="tsd-signature-symbol">(</span>cacheRecord<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">CacheRecord</span>, responseScopes<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">ScopeSet</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
+						<li class="tsd-signature tsd-kind-icon">save<wbr>Cache<wbr>Record<span class="tsd-signature-symbol">(</span>cacheRecord<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">CacheRecord</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_src_cache_storage_.storage.html">Storage</a>.<a href="_src_cache_storage_.storage.html#savecacherecord">saveCacheRecord</a></p>
 								<ul>
-									<li>Defined in node_modules/@azure/msal-common/dist/src/cache/CacheManager.d.ts:49</li>
+									<li>Defined in node_modules/@azure/msal-common/dist/src/cache/CacheManager.d.ts:48</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -632,9 +638,6 @@
 									<h5>cacheRecord: <span class="tsd-signature-type">CacheRecord</span></h5>
 									<div class="tsd-comment tsd-typography">
 									</div>
-								</li>
-								<li>
-									<h5><span class="tsd-flag ts-flagOptional">Optional</span> responseScopes: <span class="tsd-signature-type">ScopeSet</span></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -651,7 +654,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/cache/Storage.ts#L59">src/cache/Storage.ts:59</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/cache/Storage.ts#L64">src/cache/Storage.ts:64</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -682,7 +685,7 @@
 							<aside class="tsd-sources">
 								<p>Overrides CacheManager.setItem</p>
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/cache/Storage.ts#L71">src/cache/Storage.ts:71</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/cache/Storage.ts#L77">src/cache/Storage.ts:77</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -716,7 +719,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/cache/Storage.ts#L278">src/cache/Storage.ts:278</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/cache/Storage.ts#L293">src/cache/Storage.ts:293</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -746,7 +749,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/cache/Storage.ts#L288">src/cache/Storage.ts:288</a></li>
+									<li>Defined in <a href="https://github.com/AzureAD/microsoft-authentication-library-for-js/blob/dev/lib/msal-node/src/cache/Storage.ts#L303">src/cache/Storage.ts:303</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -777,7 +780,7 @@
 							<aside class="tsd-sources">
 								<p>Inherited from <a href="_src_cache_storage_.storage.html">Storage</a>.<a href="_src_cache_storage_.storage.html#toobject">toObject</a></p>
 								<ul>
-									<li>Defined in node_modules/@azure/msal-common/dist/src/cache/CacheManager.d.ts:172</li>
+									<li>Defined in node_modules/@azure/msal-common/dist/src/cache/CacheManager.d.ts:171</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
