--- a/ref/msal-node/modules/_src_index_.html
+++ b/ref/msal-node/modules/_src_index_.html
@@ -81,6 +81,7 @@
 								<li class="tsd-kind-reference tsd-parent-kind-module"><a href="_src_index_.html#devicecoderequest" class="tsd-kind-icon">Device<wbr>Code<wbr>Request</a></li>
 								<li class="tsd-kind-reference tsd-parent-kind-module"><a href="_src_index_.html#icacheplugin" class="tsd-kind-icon">ICache<wbr>Plugin</a></li>
 								<li class="tsd-kind-reference tsd-parent-kind-module"><a href="_src_index_.html#inetworkmodule" class="tsd-kind-icon">INetwork<wbr>Module</a></li>
+								<li class="tsd-kind-reference tsd-parent-kind-module"><a href="_src_index_.html#loglevel" class="tsd-kind-icon">Log<wbr>Level</a></li>
 								<li class="tsd-kind-reference tsd-parent-kind-module"><a href="_src_index_.html#promptvalue" class="tsd-kind-icon">Prompt<wbr>Value</a></li>
 								<li class="tsd-kind-reference tsd-parent-kind-module"><a href="_src_index_.html#publicclientapplication" class="tsd-kind-icon">Public<wbr>Client<wbr>Application</a></li>
 								<li class="tsd-kind-reference tsd-parent-kind-module"><a href="_src_index_.html#refreshtokenrequest" class="tsd-kind-icon">Refresh<wbr>Token<wbr>Request</a></li>
@@ -144,6 +145,11 @@
 					<a name="inetworkmodule" class="tsd-anchor"></a>
 					<h3>INetwork<wbr>Module</h3>
 					Re-exports INetworkModule
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-module">
+					<a name="loglevel" class="tsd-anchor"></a>
+					<h3>Log<wbr>Level</h3>
+					Re-exports LogLevel
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-reference tsd-parent-kind-module">
 					<a name="promptvalue" class="tsd-anchor"></a>
@@ -284,6 +290,9 @@
 					</li>
 					<li class=" tsd-kind-reference tsd-parent-kind-module">
 						<a href="_src_index_.html#inetworkmodule" class="tsd-kind-icon">INetwork<wbr>Module</a>
+					</li>
+					<li class=" tsd-kind-reference tsd-parent-kind-module">
+						<a href="_src_index_.html#loglevel" class="tsd-kind-icon">Log<wbr>Level</a>
 					</li>
 					<li class=" tsd-kind-reference tsd-parent-kind-module">
 						<a href="_src_index_.html#promptvalue" class="tsd-kind-icon">Prompt<wbr>Value</a>
